Breadcrumb now no longer overlaps into the navbar

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -6,6 +6,7 @@
 #sidebar {
 	min-width:250px;
 	max-width:250px;
+	
 }
 #sidebar.active {
 	margin-left:-250px;
@@ -114,6 +115,7 @@ body {
     height: 15mm;
     width: 100vw;
     margin-left:-15px;
+	overflow:hidden;
 }
 
 
